# musescore_crash

./: create_sym.sh
CrashReporter/: 86f16d5c-fe2e-46ca-93cb-bbcdff1cebe2.dmp  CrashReporter.pro  CrashReporterWidget.cpp  main.cpp  version.h
cv2pdb/: README.txt  cv2pdb.ilk
dump_syms/: UpgradeLog.htm  dump_syms.vcxproj
dump_syms/Debug/: dump_syms.ilk  vc140.idb
dump_syms/Debug/dump_syms.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dump_syms.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
qt_example/breakpad_report/: 972290fe-9619-4097-bf53-c9196a2a9b04.dmp  README.txt  a32acd69-0d4a-4630-a1e8-6ebc6b7ac502.dmp  create_sym_dir.sh  stackwalk.txt  stackwalk_mingw32.txt
qt_example/build-qt_example-Desktop_Qt_5_8_0_MSVC2015_32bit-Default/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qt_example.cbp  qt_example.ilk  qt_example.sym  rules.ninja
qt_example/qt_example/: CMakeLists.txt  crash_handler.cpp  crash_handler.h  main.cpp
symbols/test/E9F117FB61AB56B138207A0AABA8156F0/: test.sym
test_breakpads/: 0e90bbe2-da5b-69f4-4a00207a-3c83079a.dmp  22b4cea6-be2a-15e7-07d297b7-179f0d51.dmp  Readme.md  compile.sh  create_sym.sh  human_readable_stack_trace.txt  test  test.cpp
windows_client/: Readme.md  bef65469-9283-4cf2-a417-511e00950e8d.dmp  main.cpp  windows_client.pro
windows_client_vc2015_v2/: 11dc193a-ecbd-4953-981b-c1791bc3f837.dmp  2b849ac3-3cbe-424a-8317-3144cc89d1c0.dmp  main.cpp  test.sym  windows_client_vc2015_v2.pro
(+3 files in other folders)
